Adding final functionalities for Password-Generator
FInally Password-Generator is now working successfully !!

--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
                 <input type="range" min="1" max="20" class="slider" step="1" data-lengthSlider>
 
                 <!-- checkboxes -->
-                 <div>
+                <div>
                     <input type="checkbox" id="uppercase">
                     <label for="uppercase">Includes Uppercase letters</label>
-                 </div>
+                </div>
 
-                 <div>
-                    <input type="checkbox" id="uppercase">
+                <div>
+                    <input type="checkbox" id="lowercase">
                     <label for="lowercase">Includes Lowercase letters</label>
-                 </div>
+                </div>
 
-                 <div>
+                <div>
                     <input type="checkbox" id="numbers">
-                    <label for="uppercase">Includes Numbers</label>
-                 </div>
+                    <label for="numbers">Includes Numbers</label>
+                </div>
 
-                 <div>
+                <div>
                     <input type="checkbox" id="symbols">
-                    <label for="uppercase">Includes Symbols</label>
-                 </div>
+                    <label for="symbols">Includes Symbols</label>
+                </div>
 
                  <!-- strength section -->
                   <div class="strength-container">
